Fix issues with flexing and wrapping

--- a/style.css
+++ b/style.css
@@ -3,12 +3,20 @@ body {
   font-family: "Roboto";
 }
 
+.header-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #1f2937;
+  padding: 20px 0px;
+}
+
 .header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 20vw;
-  background: #1f2937;
+  width: 1000px;
+  padding: 0px 30px;
 }
 
 ul {
@@ -31,11 +39,18 @@ a {
   font-weight: 600;
 }
 
+.hero-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #1f2937;
+}
+
 .hero {
   display: flex;
-  padding: 80px 20vw;
-  background: #1f2937;
+  padding: 80px 30px;
   color: #e5e7eb;
+  width: 1000px;
 }
 
 .hero-text {
@@ -43,6 +58,7 @@ a {
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-evenly;
+  width: 502px;
 }
 
 .title {
@@ -71,13 +87,29 @@ p {
   background: #e5e7eb;
 }
 
+.information-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .information {
-  padding: 40px 20vw 100px;
+  padding: 40px 30px 100px;
 }
 
 .cards {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  gap: 60px;
+  flex-wrap: wrap;
+}
+
+.left-cards,
+.right-cards {
+  display: flex;
+  justify-content: center;
+  gap: 60px;
+  flex-wrap: wrap;
 }
 
 .info-text {
@@ -129,6 +161,7 @@ p {
   font-style: italic;
   font-weight: 300;
   margin-bottom: 15px;
+  min-width: 700px;
 }
 
 .author {
@@ -152,6 +185,7 @@ p {
   align-items: center;
   background: #3882f6;
   width: 1000px;
+  min-width: 451px;
   border-radius: 15px;
 }
 
@@ -160,9 +194,10 @@ p {
   justify-content: space-between;
   align-items: center;
   min-height: 140px;
-  padding: 0 10px;
+  padding: 0 20px;
   flex: 0 1 700px;
   flex-wrap: wrap;
+  align-content: space-evenly;
 }
 
 .big-text {
@@ -203,4 +238,5 @@ p {
 .footer-text {
   color: #e5e7eb;
   font-size: 17px;
+  white-space: nowrap;
 }
